Switch jface.text.tests to Java 17